Bug 384154 layout-debug component does not build r=benjamin